inserir fonte e cores

--- a/style.css
+++ b/style.css
@@ -1,4 +1,41 @@
-col#csedans{
-    background-color: aqua;
+*{
+    margin: 0px;
+    padding: 0px;
+}
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
+section{
+    min-width: 375px;
+    max-width: 1440px;
+    margin: auto;
+    display: flex;
+    padding: 40px;
+
+}
+
+
+col#csedans{
+    background-color: hsl(31, 77%, 52%)
+
+}
+
+col#csuvs {
+    background-color: hsl(184, 100%, 22%);
+
+}
+
+col#cluxury {
+    background-color: hsl(179, 100%, 13%);
+
+}
+
+body{
+font-family: 'Lexend Deca', sans-serif;
+
+}
+
+th{
+    padding: 0px;
+    margin: 0px;
 }
