--- a/style.css
+++ b/style.css
@@ -43,4 +43,6 @@ body{
 .box h2{
     font-family: 'Big Shoulders Display', cursive;
     text-transform: uppercase;
+    color: white;
+    font-size: 30px;
 }
