--- a/style.css
+++ b/style.css
@@ -58,4 +58,20 @@ body{
     border-radius: 26px;
     margin-top: 60px;
     display: inline-block;
+    border: 2px solid hsla(0, 0%, 100%, 0.75);
+
+}
+
+.box1 a{
+    color: hsl(31, 77%, 52%);
+}
+
+.box2 a{
+    color: hsl(184, 100%, 22%)  ;
+    
+}
+
+.box3 a{
+    color: hsl(179, 100%, 13%);
+    
 }
