--- a/style.css
+++ b/style.css
@@ -80,3 +80,9 @@ body{
     color: hsl(0, 0%, 95%);
     background: transparent;
 }
+
+@media only screen and (max-width: 768px ){
+    .wrapper {
+        grid-template-columns: auto;
+    }
+}
