--- a/style.css
+++ b/style.css
@@ -86,3 +86,8 @@ body{
         grid-template-columns: auto;
     }
 }
+
+@media only screen and (max-width: 425px ){
+    .wrapper {
+        margin: 1rem .5rem;
+}
